<resources>
    <string name="app_name">Stethoscope</string>
    <string name="title">WIRELESS STETHOSCOPE ELECTRONIC</string>
    <string name="home_title">Heart Monitoring</string>
    <string name="nama_tenaga_medis">Nama Tenaga Medis</string>
    <string name="product_code">Product Code</string>
    <string name="submit">Submit</string>
    <string name="frekuensi_detak_jantung">Frekuensi Detak Jantung</string>
    <string name="bit">Bit</string>
    <string name="save_data">Save Data</string>
    <string name="klasifikasi_jantung">Klasifikasi Jantung</string>
    <string name="open">Drawer Open</string>
    <string name="close">Drawer Close</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
