<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <com.jjoe64.graphview.GraphView
            android:id="@+id/graph"
            android:layout_width="match_parent"
            android:layout_height="300dp" />

        <TextView
            android:id="@+id/tv_title_frekuensi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/graph"
            android:layout_marginTop="10dp"
            android:text="@string/frekuensi_detak_jantung"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_frekuensi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_title_frekuensi"
            android:layout_marginTop="5dp"
            android:background="@drawable/bg_text"
            android:paddingLeft="20dp"
            android:paddingTop="10dp"
            android:paddingRight="20dp"
            android:paddingBottom="10dp"
            android:text="150 Hz" />

        <TextView
            android:id="@+id/tv_title_klasifikasi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/graph"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal"
            android:text="@string/klasifikasi_jantung"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_klasifikasi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_title_klasifikasi"
            android:layout_alignLeft="@+id/tv_title_klasifikasi"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="5dp"
            android:background="@drawable/bg_text"
            android:gravity="center_horizontal"
            android:paddingLeft="20dp"
            android:paddingTop="10dp"
            android:paddingRight="20dp"
            android:paddingBottom="10dp"
            android:text="Normal" />

        <TextView
            android:id="@+id/tv_title_bit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_frekuensi"
            android:layout_marginTop="10dp"
            android:text="@string/bit"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_bit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_title_bit"
            android:layout_marginTop="5dp"
            android:background="@drawable/bg_text"
            android:paddingLeft="20dp"
            android:paddingTop="10dp"
            android:paddingRight="20dp"
            android:paddingBottom="10dp"
            android:text="1023" />

        <TextView
            android:id="@+id/tv_title_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/tv_title_bit"
            android:layout_alignParentEnd="true"
            android:text="@string/save_data"
            android:textSize="16sp" />

        <ImageButton
            android:id="@+id/img_btn_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_title_save"
            android:layout_alignStart="@+id/tv_title_save"
            android:layout_alignLeft="@+id/tv_title_save"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:background="@drawable/bg_text"
            android:paddingLeft="20dp"
            android:paddingTop="10dp"
            android:paddingRight="20dp"
            android:paddingBottom="10dp"
            android:src="@drawable/ic_save" />

        <Button
            android:id="@+id/btn_start_stream"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_bit"
            android:layout_marginTop="20dp"
            android:text="Start Stream" />

        <Button
            android:id="@+id/btn_stop_stream"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btn_start_stream"
            android:layout_marginTop="5dp"
            android:text="Stop Stream" />

    </RelativeLayout>

</ScrollView>